fixed spacing error in mobile view as well as navbar styling

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -971,3 +971,8 @@ section {
         font-size: 0.92rem;
     }
 }
+
+/* QUICK FIX FOR MOBILE HORIZONTAL SCROLL */
+html, body {
+    overflow-x: hidden;
+}
